v4.14.4 ??? February 2013
  - Bug fixes.

v4.14.3 28th January 2013
  - The /KeepReference/ argument annotation, when applied to factories, will
    now keep the reference with the object created by the factory.
  - Any object that supports the buffer protocol can now be passed when a
    sip.voidptr is expected.
  - Bug fixes.

v4.14.2 8th December 2012
  - Added sip.setdestroyonexit().
  - sip.voidptr() will now accept any object that implements the buffer
    protocol.
  - Bug fixes.

v4.14.1 27th October 2012
  - SIP_PYBUFFER can now be used to define objects that implement the Python
    buffer protocol.
  - Added /Capsule/ typedef annotation.
  - Added the 'z' format character to sipBuildResult().
  - Added the 'z', '!' and '$' format characters to sipParseResult().
  - The C prototype foo(void) is now accepted.
  - sipdistutils.py will now include swig_opts if no sip_opts have been
    defined.
  - Bug fixes.

v4.14 29th September 2012
  - The internal API version is increased to 9.0 requiring the regeneration of
    all modules.
  - Added the %InstanceCode directive.
  - Added the %VirtualErrorHandler directive.
  - Added the default_VirtualErrorHandler argument to the %Module directive.
  - Added the /VirtualErrorHandler/ class annotation.
  - Added the /NoVirtualErrorHandler/ and /VirtualErrorHandler/ function
    annotations.
  - The /AllowNone/ and /NoRelease/ mapped type annotations can now be used
    with mapped type templates.
  - SIP_PLATFORM_* and SIP_TIMELINE_* preprocessor symbols are generated
    corresponding to the '-t' arguments passed on the command line.
  - Deprecated sipTransferBreak().
  - For Python v2.x unsigned short and unsigned char (when used as a byte) are
    now converted to int, rather than long, objects.
  - Added support for MSVC 2010 to the build system.

v4.13.3 20th June 2012
  - The /NoRaisesPyException/ and /RaisesPyException/ function annotations can
    now be applied to constructors.